--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
 
 <p>Yacha (Yet Another Chat App) is a chat app created as a homework assignment for the course Software Architectures at Budapest 
 University of Technology and Economics. We aimed to create a simple online multiuser chat application demonstrating modern Web technologies 
-such as <a href="https://babeljs.io/">Babel</a> <a href="https://webpack.github.io/">Webpack</a> 
+such as <a href="https://babeljs.io/">Babel</a>, <a href="https://webpack.github.io/">Webpack</a>, 
 <a href="https://facebook.github.io/react/">React</a> and <a href="https://nodejs.org/en/">Node.js</a></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Try it in action: </p>
+<ul>
+  <li><a href="http://yacha.herokuapp.com">Go to <strong>Live Demo</strong></a></li>
+</ul>
+<p> The application is currently published to a starter dyno on Heroku, which is spun up on 
+demand so be patient the first time you load it :)</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
