--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ such as <a href="https://babeljs.io/">Babel</a>, <a href="https://webpack.github
 <a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h3>
 
 <p>Try it in action: </p>
-<ul>
-  <li><a href="http://yacha.herokuapp.com">Go to <strong>Live Demo</strong></a></li>
-</ul>
+
+<button><a href="http://yacha.herokuapp.com">Go to <strong>Live Demo</strong></a></button>
+
 <p> The application is currently published to a starter dyno on Heroku, which is spun up on 
 demand so be patient the first time you load it :)</p>
 
