--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ such as <a href="https://babeljs.io/">Babel</a>, <a href="https://webpack.github
 
 <p>Try it in action: </p>
 
-<button><a href="http://yacha.herokuapp.com">Go to <strong>Live Demo</strong></a></button>
+<p></p><button><a href="http://yacha.herokuapp.com"><strong>Go to Live Demo</strong></a></button></p>
 
 <p> The application is currently published to a starter dyno on Heroku, which is spun up on 
 demand so be patient the first time you load it :)</p>
@@ -56,7 +56,7 @@ xtra goodies like collaboration guidelines and cheat sheets in English. You can 
 <h3>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Presentation slides</h3>
 
-<a href="slides.html">Go to presentation slides </a>.
+<p></p><button><a href="slides.html"><strong>Go to slides </strong></a></button></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
