Add local slides

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ xtra goodies like collaboration guidelines and cheat sheets in English. You can 
 <h3>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Presentation slides</h3>
 
-<p></p><button><a href="https://slides.com/davidszakallas/online-chat-alkalmazas"><strong>Go to slides </strong></a></button></p>
+<p></p><button><a href="https://slides.com/davidszakallas/online-chat-alkalmazas"><strong>Go to slides</strong></a></button><a href="slides/slides.html">(Stored version)</a></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
